// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Должен корректно отрендериться главный заголовок desktop 1`] = `
<h1
  className="Title"
>
  Hello
  , it's 
  desktop
</h1>
`;

exports[`Title Должен корректно отрендериться главный заголовок touch 1`] = `
<h1
  className="Title"
>
  Hello
  , it's 
  touch
</h1>
`;
